# stove

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  ReadMe_CN.md  ReadMe_EN.md  main.c  makefile  test.stv  test.🐔
Docs/: docs.md
LexicalParser/: CMakeLists.txt  makefile  test.stv
LexicalParser/cli/: cli.c
LexicalParser/include/: common.h  core.c  parser.c  parser.h  token.list  unicodeUtf8.h  utils.c  utils.h  vm.c  vm.h
cli/: cli.c
compiler/: compiler.c  compiler.h  debug.c  debug.h
compiler/docs/: docs.md
docs/: docs.md
gc/: gc.c  gc.h
lexicalParser/: CMakeLists.txt
lexicalParser/include/: parser.c  parser.h  token.list
native/: CMakeLists.txt
objectAndClass/: CMakeLists.txt
objectAndClass/docs/: docs.md
objectAndClass/include/: class.c  class.h  header_obj.c  header_obj.h  meta_obj.c  meta_obj.h  obj_fun.c  obj_fun.h  obj_list.c  obj_list.h  obj_map.c  obj_map.h  obj_range.c  obj_range.h  obj_string.c  obj_string.h  obj_thread.c  obj_thread.h
utils/: common.h  unicodeUtf8.c  utils.c  utils.h
vm/: core.c  core.h  coreScript.inc  opcode.inc  vm.c  vm.h
